--- a/public/player.html
+++ b/public/player.html
@@ -65,5 +65,5 @@
     <script type="text/babel" src="./js/item.js"></script>
     <script type="text/babel" src="./js/list.js"></script>
 
-    <script type="text/babel" src="./core/player.js"></script>
+    <script type="text/jsx" src="./core/player.jsx"></script>
 </html>
