[ERR] Character Implementation 3/5
Added Front-end systems, some errors have not been resolved.

--- a/public/item.html
+++ b/public/item.html
@@ -60,10 +60,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <script type="text/babel" src="./core/main.js"></script>
+    
     <script type="text/babel" src="./js/player.js"></script>
     <script type="text/babel" src="./js/campaign.js"></script>
     <script type="text/babel" src="./js/item.js"></script>
     <script type="text/babel" src="./js/list.js"></script>
 
-    <script type="text/babel" src="./core/item.js"></script>
+    <script type="text/jsx" src="./core/item.jsx"></script>
 </html>
