--- a/public/player.html
+++ b/public/player.html
@@ -23,7 +23,7 @@
         </div>
     </header>
 
-    <section id="content" style="overflow: hidden;">
+    <section id="content" style="overflow: auto;">
         <div>
             <div class="center jcenter vertical" style="height: 100%;">
                 <div class="sk-cube-grid">
