--- a/public/view_lore.html
+++ b/public/view_lore.html
@@ -40,17 +40,11 @@
             </div>
         </div>
     </section>
-
-    <footer class="">
-        <h2>Made with ☕ in New Zealand</h2>
-
-        <h2>UnRealReincarlution</h2>
-    </footer>
 </body>
     <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-storage.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-performance.js"></script>
 
     <!-- Replace development with production upon release -->
@@ -58,14 +52,15 @@
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    
+
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+
     <script type="text/babel" src="./core/main.js"></script>
-    <script type="text/jsx" src="./js/lore.jsx"></script>
+    <script type="text/babel" src="./js/selectable.js"></script>
     <script type="text/babel" src="./js/player.js"></script>
     <script type="text/babel" src="./js/campaign.js"></script>
     <script type="text/babel" src="./js/item.js"></script>
     <script type="text/babel" src="./js/list.js"></script>
-    
-    <script type="text/jsx" src="./core/class_modal.jsx"></script>
-    <script type="text/jsx" src="./core/campaign.jsx"></script>
+    <script type="text/jsx" src="./js/view_lore.jsx"></script>
 </html>
