--- a/public/create.html
+++ b/public/create.html
@@ -23,7 +23,7 @@
         </div>
     </header>
 
-    <section id="content" style="overflow: hidden;">
+    <section id="content" style="overflow: auto;">
         <div>
             <div class="center jcenter vertical" style="height: 100%;">
                 <div class="sk-cube-grid">
@@ -66,6 +66,7 @@
     <script type="text/babel" src="./js/item.js"></script>
     <script type="text/babel" src="./js/list.js"></script>
     <script type="text/babel" src="./js/create.js"></script>
+    <script type="text/jsx" src="./js/create_camp.jsx"></script>
 
     <script type="text/babel" src="./core/create.js"></script>
 </html>
