--- a/public/auth.html
+++ b/public/auth.html
@@ -37,7 +37,7 @@
     </section>
 
     <footer class="">
-        <h2>Made with ☕ in New Zealand</h2>
+        <h2>Made with ❤️ in New Zealand</h2>
 
         <h2>UnRealReincarlution</h2>
     </footer>
